--- a/src/components/modals/_modal-slideout-mixins.scss
+++ b/src/components/modals/_modal-slideout-mixins.scss
@@ -16,9 +16,10 @@
   background: #fff;
   z-index: 1;
   transition: transform 0.3s ease-in-out;
-
-  @include media("<=tablet") {
-    width: 100%;
+  @include media-context($vanilla-breakpoints) {
+    @include media("<=tablet") {
+      width: 100%;
+    }
   }
 }
 
